<resources>
    <string name="app_name">ALET</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--HINT-->
    <string name="first_name">First Name<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="last_name">Last Name<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="email">Email Address<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="phone">Phone Number<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="password">Password<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="new_password">New Password<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="con_password">Confirm Password<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="new_con_password">Confirm New Password<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="old_password">Old Password<font color="#ff2d2d"><bold>*</bold></font></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="copyright">Copyright © <font color="#FBC400">A-LET</font></string>

    <string name="q">Q.</string>

    <!--details page titles-->
    <string name="title_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="title_history">History</string>
    <string name="title_faq">Frequently Asked Question</string>
    <string name="title_activity_maps">Map</string>

</resources>